build: Remove use of --illegal-access option
This option now produces a warning in Java 16. We don't need it anyway
since we specify the necessary --add-opens options.

Signed-off-by: BJ Hargrave <bj@hargrave.dev>